# Dictionary

./: .gitignore  LICENSE.txt  README.md  keywords.txt  library.json  library.properties
.github/workflows/: main.yml  test.yml
examples/Dict_Example01/: Dict_Example01.ino
examples/Dict_Example02_ESP32_PSRAM/: Dict_Example02_ESP32_PSRAM.ino
src/: Dictionary.cpp  Dictionary.h  DictionaryArray.h  DictionaryDeclarations.h  NodeArray.h  NodeArrayDecl.h  QueueArray.h
src/BufferStream/: BaseBufferStream.cpp  BaseBufferStream.h  BufferStream.h  ReadBufferStream.cpp  ReadBufferStream.h  WriteBufferStream.cpp  WriteBufferStream.h
src/shoco/: shoco_model.h
tests/: Arduino.h  CMakeLists.txt  README.md  test-dictionary-basic.cpp  test-dictionary-compress.cpp  test-dictionary-delete.cpp  test-dictionary-json.cpp  test-dictionary-oom.cpp
